--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ h1 {
     color: darkblue;
 }
 
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -22,5 +22,29 @@ img {
 }
 
 p {
-    padding: 10px;
+    padding: 0;
+}
+
+main {
+    max-width: 800px;
+}
+
+aside {
+    width: 50rem;
+    margin: 3px;
+    border: 3px solid black;
+    padding: 2px 10px;
+    background-color: rgb(184, 191, 60);
+    color: rgb(23, 6, 89);
+}
+
+aside img {
+    width: 200;
+    height: auto;
+}
+
+footer {
+    margin-top: 10px;
+    border-top: 2px dotted black;
+    text-align: center;
 }
