--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -12,8 +12,35 @@
 }
 
 header {
-    /*background-color: var(--primary-color); */
+    background-color: var(--primary-color);
     color: var(--accent2-color);
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    justify-content: center;
+    align-items: center;
+}
+
+nav {
+    /* header nav */
+    grid-column-start: 2;
+    display: flex;
+    flex-direction: row;
+}
+
+nav a {
+    /* a index, about, trips and contact */
+    border: solid black;
+    padding: 6px;
+    /* margin: 10px; */
+}
+
+header img {
+    grid-column-start: 1;
+    align-self: center;
+    justify-self: center;
+    width: 10rem;
+    height: auto;
 }
 
 * {
@@ -37,7 +64,7 @@ footer {
 h1,
 h2 {
     font-family: var(--heading-font);
-    color: var(--primary-color);
+    color: var(--accent1-color);
 }
 
 nav,
@@ -46,10 +73,6 @@ section,
 article {
     margin: 16px;
     padding: 8px;
-}
-
-.socialmedia a {
-    text-decoration: none;
 }
 
 .hero {
@@ -87,7 +110,62 @@ h1 {
     width: 125px;
 }
 
+.history {
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-rows: 20px auto;
+    background-color: var(--primary-color);
+}
+
+.history h2 {
+    grid-column-start: 2;
+    text-align: center;
+}
+
+.history p {
+    grid-row: 2;
+}
+
+.history img {
+    width: 200px;
+    grid-area: 2/2;
+    padding: 8px;
+    align-self: center;
+}
+
+.adventure {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: auto 1fr;
+    justify-items: center;
+    background-color: var(--secondary-color);
+}
+
+.adventure h2 {
+    grid-area: 1 / 1 / 1 / 6;
+    text-align: center;
+    padding: 8px;
+}
+
+.adventure img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+
 footer {
-    display: flex;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    text-align: right;
     align-items: center;
+    background-color: var(--primary-color);
+}
+
+.socialmedia {
+    justify-self: center;
+}
+
+.socialmedia a {
+    text-decoration: none;
+    margin: 10px;
 }
