--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -52,6 +52,7 @@ header img {
 body {
     font-family: var(--text-font);
     color: var(--accent1-color);
+    /* background-color: var(--secondary-color); */
 }
 
 header,
@@ -59,6 +60,7 @@ main,
 footer {
     width: 840px;
     margin: auto;
+    /* background-color: var(--secondary-color); */
 }
 
 h1,
@@ -101,7 +103,9 @@ h1 {
 .hero article {
     position: absolute;
     top: 25%;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
+    color: var(--accent1-color);
+    font-weight: bold;
     opacity: 0.7;
 }
 
