--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -104,7 +104,7 @@ h1 {
     position: absolute;
     top: 25%;
     background-color: var(--primary-color);
-    color: var(--accent1-color);
+    color: black;
     font-weight: bold;
     opacity: 0.7;
 }
