--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -63,6 +63,11 @@ footer {
     /* background-color: var(--secondary-color); */
 }
 
+main {
+    background-color: var(--secondary-color);
+    border-bottom: solid var(--secondary-color);
+}
+
 h1,
 h2 {
     font-family: var(--heading-font);
@@ -89,8 +94,12 @@ article {
     height: auto;
 }
 
-h1 {
+.hero h1 {
     position: absolute;
+}
+
+h1 {
+    /* position: absolute; */
     top: 20px;
     width: 100%;
     padding: 16px;
@@ -172,4 +181,200 @@ footer {
 .socialmedia a {
     text-decoration: none;
     margin: 10px;
+}
+
+iframe {
+    margin: 20px;
+    width: 300px;
+    height: 225px;
+}
+
+.contactinfo-title {
+    text-align: center;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    /* border: solid rebeccapurple; */
+}
+
+.contactinfo p {
+    padding: 0;
+    margin: 0;
+    margin-left: 6px;
+    align-self: self-end;
+    color: darkblue;
+    /* border: solid #007FE0; */
+}
+
+.contactinfo a {
+    padding: 0;
+    margin: 0;
+    margin-left: 6px;
+    /* border: solid red; */
+    align-self: center;
+    text-decoration: none;
+}
+
+.contactinfo {
+    display: grid;
+    flex-direction: row;
+    /* border: solid #007FE0; */
+}
+
+.contactinfo-section {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.map {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+footer section {
+    padding: 0;
+    margin: 0;
+    height: 100px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+/* #contact {
+    padding: 0;
+    margin: o;
+} */
+
+#contact p {
+    padding: 0;
+    margin: 0;
+    color: #00518f;
+}
+
+.wireframe a {
+    border: 0;
+    text-decoration: none;
+}
+
+.employee {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 1fr;
+    justify-items: center;
+    background-color: var(--secondary-color);
+    color: darkblue;
+}
+
+.employee h2 {
+    grid-area: 1 / 1 / 1 / 4;
+    text-align: center;
+    padding: 8px;
+}
+
+.employee img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+}
+
+/* .form-poll {
+    background-color: var(--accent2-color);
+} */
+
+.form-poll h2 {
+    top: 20px;
+    width: 80%;
+    text-align: center;
+    justify-self: center;
+    background-color: var(--accent1-color);
+    color: black;
+    font-size: 2rem;
+}
+
+form {
+    width: 600px;
+    margin: 8px;
+    padding: 15px 20px;
+    border-radius: 2rem;
+    background-color: var(--primary-color);
+    display: grid;
+    justify-self: center;
+    color: black;
+}
+
+fieldset {
+    display: grid;
+    grid-gap: 5px;
+    margin: 15px;
+    padding: 15px;
+}
+
+legend {
+    color: darkblue;
+    font-size: larger;
+}
+
+.column1 {
+    display: flex;
+    margin: 0.5rem 2rem;
+    justify-content: center;
+    /* border: solid green; */
+    width: 80%;
+    height: 30px;
+}
+
+.column1 label {
+    font-size: larger;
+    align-self: flex-end;
+    padding-right: 5px;
+}
+
+.column1 input {
+    width: 60%;
+}
+
+.column2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    padding-bottom: 10px;
+}
+
+.column2 label {
+    grid-column-start: 2;
+    flex-direction: column;
+    text-align: left;
+}
+
+.column2 input {
+    justify-self: end;
+    width: 40px;
+}
+
+textarea {
+    width: 100%;
+    height: 100px;
+}
+
+button {
+    width: 120px;
+    height: 40px;
+    padding: 5px;
+    border-radius: 9px;
+    justify-self: center;
+    background-color: var(--accent1-color);
+    color: rgb(0, 0, 0);
+    font-size: larger;
+}
+
+.subscribe {
+    justify-self: center;
+    padding-bottom: 10px;
+}
+
+button:hover {
+    background-color: darkblue;
 }
