--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -187,6 +187,7 @@ iframe {
     margin: 20px;
     width: 300px;
     height: 225px;
+    border: 0;
 }
 
 .contactinfo-title {
@@ -226,6 +227,10 @@ iframe {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+.contactinfo div {
+    display: flex;
 }
 
 .map {
