--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -152,6 +152,7 @@ h1 {
     grid-template-rows: auto 1fr;
     justify-items: center;
     background-color: var(--secondary-color);
+    color: #00518f;
 }
 
 .adventure h2 {
@@ -179,7 +180,6 @@ footer {
 }
 
 .socialmedia a {
-    text-decoration: none;
     margin: 10px;
 }
 
@@ -212,7 +212,6 @@ iframe {
     margin-left: 6px;
     /* border: solid red; */
     align-self: center;
-    text-decoration: none;
 }
 
 .contactinfo {
@@ -246,22 +245,17 @@ footer section {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-}
-
-/* #contact {
-    padding: 0;
-    margin: o;
-} */
-
-#contact p {
-    padding: 0;
-    margin: 0;
     color: #00518f;
 }
 
+/* #contact p {
+    padding: 0;
+    margin: 0;
+    color: #00518f;
+} */
+
 .wireframe a {
     border: 0;
-    text-decoration: none;
 }
 
 .employee {
@@ -285,9 +279,6 @@ footer section {
     object-fit: cover;
 }
 
-/* .form-poll {
-    background-color: var(--accent2-color);
-} */
 
 .form-poll h2 {
     top: 20px;
@@ -308,6 +299,7 @@ form {
     display: grid;
     justify-self: center;
     color: black;
+    /* border: solid red; */
 }
 
 fieldset {
@@ -382,4 +374,111 @@ button {
 
 button:hover {
     background-color: darkblue;
+}
+
+#index h3 {
+    text-align: center;
+    /* border: solid red; */
+}
+
+#index .adventure {
+    /* border: solid black; */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto 1fr;
+    justify-items: center;
+    background-color: var(--secondary-color);
+}
+
+#index .adventure img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+.contact-link {
+    display: grid;
+    justify-content: center;
+    /* border: solid green; */
+}
+
+.contact-link article {
+    border: solid rgb(185, 104, 104);
+    padding: 10px 60px;
+    display: flex;
+    width: 800px;
+    background-color: var(--primary-color);
+}
+
+.contact-link img {
+    width: 300px;
+    grid-column-start: 1;
+    justify-self: end;
+}
+
+.contact-link p {
+    grid-column-start: 2;
+    align-self: center;
+}
+
+.trips1,
+.trips2 {
+    /* border: solid black; */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 20px 1fr;
+    text-align: center;
+    padding: 15px;
+}
+
+.trips1 img {
+    grid-column-start: 1;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    width: 200px;
+    height: 200px;
+    margin-left: 50px;
+
+}
+
+.trips2 img {
+    grid-column-start: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    justify-self: right;
+    margin-right: 50px;
+
+}
+
+.trips {
+    margin: auto 50px;
+}
+
+.table {
+    display: grid;
+    justify-content: space-around;
+}
+
+table {
+    border: 3px solid var(--accent1-color);
+    width: 600px;
+}
+
+th,
+td {
+    border: solid var(--accent2-color);
+    text-align: center;
+    background-color: var(--primary-color);
+    color: #00518f;
+}
+
+table caption {
+    margin: 10px;
+}
+
+a {
+    text-decoration: none;
 }
